# Buselligence

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  TRADEMARK.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  release.yml
cli/: package-lock.json  package.json
cli/src/: index.ts
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: AGENTS.md  ARCHITECTURE.md  BADGE.md  BYOK.md  CORE.md  DEPLOYMENT.md  DESKTOP.md  EXTENSIONS.md  GENESIS.md  GETTING_STARTED.md  KERNEL.md  MANIFESTO.md  MCP.md  MODELS.md  OUTBOUND.md  PLATFORM.md  README.md  SEMANTIC_LAYER.md  SKILLS.md  STUDIO.md  TRADEMARK.md  WHY.md
e2e/: auth.setup.ts  auth.spec.ts  health.spec.ts  pages.spec.ts
examples/: README.md
examples/ai-chatbot/: README.md
examples/ai-coding-agent/: README.md
examples/analytics-dashboard/: README.md
examples/autonomous-agent/: README.md
examples/autonomous-business-app/: README.md
examples/bi-analyst/: README.md
scripts/: e2e-prepare.js  ensure-env.js  welcome.js
server/: README.md  package-lock.json  package.json
video/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+185 files in other folders)
