[package]
name = "buselligence-desktop"
version = "1.0.0"
description = "Buselligence Desktop Runtime"
authors = ["Salestrics"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "buselligence_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "buselligence-desktop"
path = "src/main.rs"
